    conffile pathname arguments are absolute paths and verify version number
    to be valid. Thanks to David Kalnischkies <david@kalnischkies.de>.
  * Add support to dpkg-scanpackages for scanning a single binary file.
    Thanks to Javier Serrano Polo <javier@jasp.net>. Closes: #833964
  * Obsolete dpkg-deb bzip2 and lzma compression methods by emitting errors.
  * Perl modules:
    - Obsolete Source-Version substvar in Dpkg::Substvars by emitting errors.
  * Packaging:
    - Add liblocale-gettext-perl to libdpkg-perl Recommends.
    - Wrap and document dependency relationships.
    - Remove obsolete dependency relationships, since Debian oldstable.
    - Remove update-alternatives, dpkg-divert and dpkg-statoverride
      compatibility symlinks, again.
    - Use perl:Depends via dh_perl instead of a hardcoded perl in Depends.
    - Remove unused dh_strip from binary_indep target.
    - Remove ancient upgrade code from maintainer scripts (before 1.15.x).
    - Stop compressing the dpkg.deb package with gzip.
  * Documentation:
    - Update custom changelog parser API support status in README.api.
    - Fix typos in docs and man pages. Thanks to Jakub Wilk <jwilk@debian.org>
      Closes: #834584
    - Fix formatting in SOURCE_DATE_EPOCH description in dpkg-deb(5).
    - Improve dpkg-deb --build arguments documentation in dpkg-deb(1).
      Prompted by Johannes Schauer <josch@debian.org>.
    - Document the .changes filename that dpkg-buildpackage generates in
      dpkg-buildpackage(1). Prompted by Johannes Schauer <josch@debian.org>.
    - Add basic maintainer script man pages: deb-postinst(5), deb-postrm(5),
      deb-preinst(5) and deb-prerm(5).
    - Add new deb-src-files(5) man page.
      Prompted by Johannes Schauer <josch@debian.org>.
    - Add man page references to other binary control files in dpkg(1).
    - Add version when "new" substvars were introduced in deb-substvars(5).
    - Switch deb-triggers(5) types into a proper list.