@@ -264,12 +264,6 @@ now obsolete; its only use is when building packages to be parsed by
 versions of dpkg older than 0.93.76 (September 1995), which was released
 as i386 a.out only.
 .TP
-.BR \-\-new
-This is a legacy alias for \fB\-\-deb\-format=2.0\fP.
-.TP
-.BR \-\-old
-This is a legacy alias for \fB\-\-deb\-format=0.939000\fP.
-.TP
 .BR \-\-nocheck
 Inhibits
 .BR "dpkg\-deb \-\-build" 's
