@@ -7,6 +7,7 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
   * Add support to dpkg-scanpackages for scanning a single binary file.
     Thanks to Javier Serrano Polo <javier@jasp.net>. Closes: #833964
   * Obsolete dpkg-deb bzip2 and lzma compression methods by emitting errors.
+  * Remove obsolete dpkg-deb --old and --new options.
   * Perl modules:
     - Obsolete Source-Version substvar in Dpkg::Substvars by emitting errors.
   * Packaging:
